--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,8 +1,14 @@
 ---
 title: "Untitled"
+subtitle: "My subtitle if needed"
+thanks: "Code and data are available at: LINK."
 author: "Qiao Zhou"
-date: "3/28/2022"
-output: html_document
+date: "`r format(Sys.time(), '%d %B %Y')`"
+abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
+output:
+  bookdown::pdf_document2
+toc: FALSE
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
