--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Untitled"
-subtitle: "My subtitle if needed"
-thanks: "Code and data are available at: LINK."
+title: "The Puzzle of the Distinct Solitude Experiences in Our Daily Life"
+subtitle: "Analyzing the factors that have an impact on the positive solitude experiences and the negative solitude experiences "
+thanks: "Code and data are available at: ."
 author: "Qiao Zhou"
-date: "`r format(Sys.time(), '%d %B %Y')`"
+date: "`r format(Sys.time(), '% 05 % April % 2022')`"
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
 output:
   bookdown::pdf_document2
@@ -12,25 +12,88 @@ bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
+library(readr)
+library(here)
+library(tidyverse)
+library(car)
 ```
 
-## R Markdown
+# Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Solitude is a ubiquitous experience in our daily lives, especially during the covid pandemic. And solitude is a double-edged sword. Some people prefer time alone over time spent with others, while others feel very depressive and lonely when they experience solitude. This fact made me curious about how solitude can be both lonely and nourishing. What's more, I have learned that many people misunderstand this word as loneliness and most psychological research on solitude emphasizes the negative correlates and consequences of loneliness. This fact may imply that most people feel inadequate and lonely when they experience solitude, which makes it even worthwhile for me to investigate the factors impacting solitude experiences. Hopefully, my research paper will help people get better solitude experiences. 
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+In this paper, I will investigate what factors will impact our solitude experiences. I divided the solitude experiences into two types- one reflecting negative experiences such as loneliness and complex thoughts(negative solitude experiences), and the other reflecting positive experiences such as calm effects and pleasant thoughts(positive solitude experiences). For further investigation, I aim to explore the data to discuss the potential correlation between the selected factors( age, gender, the rate of overall well being, social network size, social relationship quality, social self-efficacy, the self-reflection, solitude time, and anxiety level) and both the positive and negative solitude experiences. Based on my common sense and prior research, my initial hypothesis is that all of the selected variables correlate with both solitude experiences. However, the results are not the same as my expectation. The results show that people with better social quality and greater age will have more positive solitude experiences and fewer negative solitude experiences. Also, our results have shown some other factors determining the solitude experiences, such as that people with higher anxiety levels will experience more serious negative solitude experiences. And the people with a higher rate of self-reflection will experience more positive solitude. Besides, all the variables we didn't mention in the above results are shown to have little or no effect on both solitude experiences.
 
-```{r cars}
-summary(cars)
+The rest of the paper is organized as follows: In the Data section (section 2), I explain the data background, the data overview, the cleaning process and analysis regarding the potential factors influencing the solitude experiences. In the Model section (section 3), I firstly introduce the methodology I use for this section. Then, I fit two linear models using all of the selected variables -one for the positive solitude experiences and the other one for the negative solitude experiences. And finally, I made a variables selection for each model and determined the final models. In the Result section(section4), I interpreted both the final models I got from the last section to show the impact of the final selected variables corresponding to both positive and negative solitude experiences. In the discussion(section 5), I commented on the potential bias in the paper, such as data, p-hacking, and other possible variables with correlation to the 
+solitude experiences not included in the dataset. And I will suggest what we should do to investigate this topic in the future further.
+
+
+# Data
+```{r,warning=FALSE, message=FALSE}
+#read the raw data in
+raw_data <- read_csv(here("inputs/data/HS_JPvars-only_11Jan2019_complete-cases-only.csv"))
+#add two columns into the data, one represents the mean positive affect for each participate over 10days,
+#the other one represents the mean negative affect for each participate over 10days.
+raw_data<-raw_data%>%group_by(idPartID)%>%
+  mutate(mean_pos_affect=(mean(tsHiArPosAffect)+mean(tsLoArPosAffect))*1/2,
+         mean_neg_affect=(mean(tsHiArNegAffect)+mean(tsLoArNegAffect))*1/2)
+#rename my interested column and add them as new columns in our data
+raw_data<-raw_data %>% 
+  mutate(sub_health=as.numeric(idSubOverallWellbeing),,age=as.numeric(idAge),gender=as.numeric(idGender),
+         network_size=as.numeric(idSocNetworkSize),social_quality=as.numeric(idSocRelQuality),
+         self_efficacy=as.numeric(idSocSelfEfficacy),self_reflection=as.numeric(idSelfReflection),
+         anxiety=as.numeric(idSocAnxiety),solitude=as.numeric(idOverSolitude))
+#select columns 
+clean_data<-raw_data%>%
+  select(idPartID,tsAssessNumber,sub_health,age,gender,network_size,social_quality,self_efficacy,self_reflection,solitude,anxiety,mean_pos_affect,mean_neg_affect)
+#filter out replicate rows to get each participate's data
+clean_data<-clean_data%>%
+  filter(tsAssessNumber==1)
+#filter out NAs
+clean_data<-clean_data%>%
+  filter(!is.na(sub_health)&!is.na(age)&!is.na(gender)&!is.na(network_size)&!is.na(social_quality)&!is.na(self_efficacy)&!is.na(self_reflection)&!is.na(solitude)&!is.na(anxiety)&!is.na(mean_pos_affect)&!is.na(mean_pos_affect)&!is.na(idPartID)&!is.na(tsAssessNumber))
+#delete the column for assesment number and get my final data
+final_data<-clean_data%>%
+   select(idPartID,sub_health,age,gender,network_size,social_quality,self_efficacy,self_reflection,solitude,anxiety,mean_pos_affect,mean_neg_affect)
+#write the final data in a csv file and put it in the input folder
+write_csv(final_data, here("inputs/data/final_data.csv"))
 ```
 
-## Including Plots
+# Model
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r,echo=FALSE, include=FALSE}
+pos_mod=lm(mean_pos_affect~age+gender+network_size+social_quality+self_efficacy+self_reflection+solitude+anxiety,data=final_data)
+neg_mod=lm(mean_neg_affect~age+gender+network_size+social_quality+self_efficacy+self_reflection+solitude+anxiety,data=final_data)
+summary(pos_mod)
+summary(neg_mod)
+pos_vif=vif(pos_mod)
+neg_vif=vif(neg_mod)
+print(pos_vif)
+print(neg_vif)
+m = length(final_data$mean_pos_affect)
+bic_pos = step(pos_mod, direction = "backward", k = log(m))
+n = length(final_data$mean_neg_affect)
+bic_pos = step(neg_mod, direction = "backward", k = log(n))
+final_pos_mod =lm(mean_pos_affect~age+social_quality+self_efficacy,data=final_data)
+summary(final_pos_mod)
+final_neg_mod =lm(mean_neg_affect~age+social_quality+anxiety,data=final_data)
+summary(final_neg_mod)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# Results
+
+# Discussion 
+
+\newpage
+
+\appendix
+
+# Appendix {-}
+
+
+\newpage
+
+
+# References{-}
+
