ready for initial submission

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -4,7 +4,7 @@ subtitle: "Analyzing the factors that have an impact on the positive solitude ex
 thanks: "Code and data are available at: ."
 author: "Qiao Zhou"
 date: "`r format(Sys.time(), '% 05 % April % 2022')`"
-abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
+abstract: "Solitude is a double-edged sword; people have quite distinct solitude experiences. This report utilizes the data from an experiment to:1)figure out which factors correlate with the positive solitude experiences and negative solitude experiences.2)discuss the potential bias in our data. According to the data and analysis, a better social quality, higher self-efficacy, and greater age will lead to better solitude experiences. In contrast, a higher level of anxiety will lead to worse solitude experiences. However, as our dataset is too small and not representative to some extent, our conclusion may get less accurate than we expect."
 output:
   bookdown::pdf_document2
 toc: FALSE
@@ -21,15 +21,19 @@ library(car)
 
 # Introduction
 
-Solitude is a ubiquitous experience in our daily lives, especially during the covid pandemic. And solitude is a double-edged sword. Some people prefer time alone over time spent with others, while others feel very depressive and lonely when they experience solitude. This fact made me curious about how solitude can be both lonely and nourishing. What's more, I have learned that many people misunderstand this word as loneliness and most psychological research on solitude emphasizes the negative correlates and consequences of loneliness. This fact may imply that most people feel inadequate and lonely when they experience solitude, which makes it even worthwhile for me to investigate the factors impacting solitude experiences. Hopefully, my research paper will help people get better solitude experiences. 
+Solitude is a ubiquitous experience in our daily lives[@hopp], especially during the covid pandemic. And solitude is a double-edged sword.
+[@hopp]Some people prefer time alone over time spent with others, while others feel very depressive and lonely when they experience solitude. This fact made me curious about how solitude can be both lonely and nourishing. What's more, I have learned that many people misunderstand this word as loneliness and most psychological research on solitude emphasizes the negative correlates and consequences of loneliness.[@long]This fact may imply that most people feel inadequate and lonely when they experience solitude, which makes it even worthwhile for me to investigate the factors impacting solitude experiences. Hopefully, my research paper will help people get better solitude experiences. 
 
-In this paper, I will investigate what factors will impact our solitude experiences. I divided the solitude experiences into two types- one reflecting negative experiences such as loneliness and complex thoughts(negative solitude experiences), and the other reflecting positive experiences such as calm effects and pleasant thoughts(positive solitude experiences). For further investigation, I aim to explore the data to discuss the potential correlation between the selected factors( age, gender, the rate of overall well being, social network size, social relationship quality, social self-efficacy, the self-reflection, solitude time, and anxiety level) and both the positive and negative solitude experiences. Based on my common sense and prior research, my initial hypothesis is that all of the selected variables correlate with both solitude experiences. However, the results are not the same as my expectation. The results show that people with better social quality and greater age will have more positive solitude experiences and fewer negative solitude experiences. Also, our results have shown some other factors determining the solitude experiences, such as that people with higher anxiety levels will experience more serious negative solitude experiences. And the people with a higher rate of self-reflection will experience more positive solitude. Besides, all the variables we didn't mention in the above results are shown to have little or no effect on both solitude experiences.
+In this paper, I will investigate what factors will impact our solitude experiences. I divided the solitude experiences into two types- one reflecting negative experiences such as loneliness and complex thoughts(negative solitude experiences), and the other reflecting positive experiences such as calm effects and pleasant thoughts(positive solitude experiences).[@hopp] For further investigation, I aim to explore the data to discuss the potential correlation between the selected factors( age, gender, the rate of overall well being, social network size, social relationship quality, social self-efficacy, the self-reflection, solitude time, and anxiety level) and both the positive and negative solitude experiences. Based on my common sense and prior research, my initial hypothesis is that all of the selected variables correlate with both solitude experiences. However, the results are not the same as my expectation. The results show that people with better social quality and greater age will have more positive solitude experiences and fewer negative solitude experiences. Also, our results have shown some other factors determining the solitude experiences, such as that people with higher anxiety levels will experience more serious negative solitude experiences. And the people with a higher rate of self-reflection will experience more positive solitude. Besides, all the variables we didn't mention in the above results are shown to have little or no effect on both solitude experiences.
 
 The rest of the paper is organized as follows: In the Data section (section 2), I explain the data background, the data overview, the cleaning process and analysis regarding the potential factors influencing the solitude experiences. In the Model section (section 3), I firstly introduce the methodology I use for this section. Then, I fit two linear models using all of the selected variables -one for the positive solitude experiences and the other one for the negative solitude experiences. And finally, I made a variables selection for each model and determined the final models. In the Result section(section4), I interpreted both the final models I got from the last section to show the impact of the final selected variables corresponding to both positive and negative solitude experiences. In the discussion(section 5), I commented on the potential bias in the paper, such as data, p-hacking, and other possible variables with correlation to the 
 solitude experiences not included in the dataset. And I will suggest what we should do to investigate this topic in the future further.
 
 
 # Data
+\
+The research uses R language[@rstudio] as its foundation, where we have used packages such as tidyverse[@tidy], here[@here] and readr[@readr] to prepare data for this project. Where we then used knitr[@knitr] to generate table and ggplot2[@ggplot2] to generate plots.
+\
 ```{r,warning=FALSE, message=FALSE}
 #read the raw data in
 raw_data <- read_csv(here("inputs/data/HS_JPvars-only_11Jan2019_complete-cases-only.csv"))
